<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上校园</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">用户登录</string>
	<string name="login_username"> 学   号：</string>
    <string name="login_password"> 密    码：</string>
    <string name="btn_login"> 登录</string>
   	<string name="btn_regist"> 注册</string>
   	<string name="login_checkbox">记住密码</string>
   	<string name="login_introduce">蚌埠学院13级软件工程班张小蒙</string>
	<string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="home_content">
       \t\t\t\t蚌埠学院是教育部2007年批准设立的省属普通本科高校，由原蚌埠高等专科学校、蚌埠教育学院、蚌埠职工大学三所学校合并组建，有30多年的办学历史。学校位于皖北中心城市，素有两淮重镇、沪宁咽喉之称的安徽省蚌埠市。东靠京沪高铁蚌埠南站，南依芦山，西接国家4A级龙子湖风景区，北邻安徽财经大学，风光迤逦，人文荟萃，交通便捷。学校占地总面积近1300亩，其中在征300余亩；现有校舍面积28.99万平方米，在建2.4万余平方米，另有5万余平方米正在报建中；教学仪器设备总值8860余万元，多媒体教室和语音实验室座位11292座；建有2个省级实验教学示范中心，3个省级校企合作实践教育基地，20个实验实训教学中心，126个校外实习实训基地；图书馆馆藏文献总量196余万册，其中纸质文献总量近110万册，电子文献总量87万册，各类中外文期刊近2000种，公开出版《蚌埠学院学报》。学校现有教职工924人，其中专任教师645人，副高以上专任教师 173人，硕士以上专任教师443人，外聘教师162人，升本以来20余人次获得“全国优秀教师”、“全省优秀教师”等荣誉称号；现有全日制在校生14406人。学校现设机械与电子工程系、生物与食品工程系、计算机科学与技术系、应用化学与环境工程系、数学与物理系、经济与管理系、艺术设计系、外语系、文学与教育系、音乐与舞蹈系、思想政治理论课教学部、体育部等12个教学单位，专设淮河文化研究中心、工程研究中心和现代艺术中心等机构，设有机械设计研究所等校内研究机构21个，开设39个本科专业。
      学校坚持以工为主，注重多学科协调发展，确立了“地方性、应用型、工程化”的办学定位，秉持“笃学、重行、修德、立才”的校训精神，艰苦创业、锐意改革，坚持走内涵发展、开放办学、合作育人之路，为地方经济社会发展培养了大批应用型人才，办学实力显著提升。近年来，学校获批建设省级“质量工程”项目127项，其中省级特色专业3个、省级综合改革试点专业4个、省级精品课程 11门、省级教学团队3个、省级教学成果奖17项。承担厅级及以上纵向科研项目270项，其中国家级、省部级项目36项。与有关企业签订在研项目172项，与企业联合共建省级工程技术中心1个、省级中小企业生产力促进中心1个、市级工程技术中心1个。教师发表论文2614篇，其中SCI、EI收录118篇，CSSCI收录132篇，主编教材、出版专著42部。学校高度重视实践育人和学生实践能力的培养，学生在“挑战杯”、数学建模、大学生艺术展演等科技文化活动中，获得省级以上奖励200余项，获批国家级大学生创新创业训练计划项目92项。
      学校秉承“以生为本”的教育理念，高度重视良好育人环境的营造，一次性投入3000余万元实施“空调进高校”工程，实现了空调全覆盖；投资1200万元，分三期建设校园“110”智能监控平台；通过“奖、贷、勤、助、免、补”等方式，每年投入1500余万元，用于奖励和资助各类学生；设有大学生一站式服务中心、宿舍集中自习室等，后勤集团宿管中心多次被评为省级先进集体。
      学校重视对外开放办学，积极吸纳和借鉴国外先进教育理念。设有安徽省唯一授权认证的意大利语等级考点，与美国特洛伊大学、意大利马切拉塔美术学院、韩国韩瑞大学等国外高校建立校际合作关系，开展合作办学、互派教师教学培训、学术交流等。
      学校先后荣获全国高校教师网络培训工作先进集体、安徽省高校教师培训工作先进集体、安徽省普通高校毕业生就业工作标兵单位、蚌埠市文明单位、蚌埠市人才工作先进单位等荣誉称号，学校党委被授予安徽省委教育工委“创先争优先进基层党组织”。博观而约取，厚积而薄发。蚌埠学院是一所充满生机与活力的学校，目前学校正在全面落实首届党代会确定的战略发展目标和“十二五”建设发展规划，紧紧围绕“以评促建、以评促改、以评促管、评建结合、重在建设”的指导思想，大力推进教育教学改革，坚持走内涵式发展道路，凝心聚力谋发展，心无旁骛抓建设，为把学校建设成为规模适度、结构合理、特色鲜明、人才培养质量和办学效益好、与区域经济社会发展良性互动的应用型本科院校而努力奋斗。   	
    </string>
    <string name="tab_1">日程</string>
	<string name="tab_2">周末</string>
	<string name="tab_3">计划</string>
    
    
</resources>
